--- a/index.html
+++ b/index.html
@@ -9,103 +9,117 @@
     </head>
 
     <body>
-        <div class="main-div">
-            <div class="first-child">
-                <div class="second-child-fat">
-                    <div class="third-child1">
-                        <div>
-                            <h2>European Marine Observation and Data Network (EMODnet) </h2>
-                        </div>
-                        <div>This site is managed by the Directorate-General for Maritime Affairs and Fisheries (DG
-                            MARE)
-                        </div>
-                        <div>Accessibility</div>
+        <div class="container justify-center color-white height-800">
+            <div class="max-width column height-800 padding-32"> <!--contenitore centrale -->
+                <div class="gap-row-32 gap-column-16"> <!--primo-->
+                    <div class="grow-1 column min-width-334 gap-row-16">
+                        <h3 class="margin-0">European Marine Observation and Data Network (EMODnet) </h3>
+                        <span> This site is managed by the Directorate-General for Maritime Affairs and Fisheries
+                            (DG MARE)</span>
+                        <a class="white-link" href="https://emodnet.ec.europa.eu/accessibility-statement">Accessibility</a>
                     </div>
-                    <div class="third-child1">
-                        <div>
-                            <h3>About us </h3>
+                    <div class="grow-1 column min-width-334 gap-row-16">
+                        <div class="column gap-row-8">
+                            <span><strong>About us</strong></span>
+                            <div class="divider"></div>
+                            <a class="white-link" href="https://emodnet.ec.europa.eu/about_emodnet">The European
+                                Marine Observation and Data Network (EMODnet) is a network of organisations supported by
+                                the EU’s integrated maritime policy.</a>
                         </div>
-                        <div class="divider"></div>
-                        <div> The European Marine Observation and Data Network (EMODnet) is a network of organisations
-                            supported by the EU’s integrated maritime policy.</div>
-                        <div>
-                            <h3>Contact us </h3>
+                        <div class="column gap-row-8">
+                            <span><strong>Contact us</strong></span>
+                            <div class="divider"></div>
+                            <a class="white-link" href="https://emodnet.ec.europa.eu/contact-us">Contact information</a>
                         </div>
-                        <div class="divider"></div>
-                        <div>Contact information</div>
-                        <div>
-                            <h3>Follow us on </h3>
-                        </div>
-                        <div class="divider"></div>
-                        <div class="third-child">
-                            <div>
-                                <a href="http://twitter.com/emodnet"><img src="./Assets/twitter-icon.svg" alt="Twitter"
-                                        height="12px"></a>
-                                <a href="https://twitter.com/emodnet">Twitter</a>
-                                <a href="http://twitter.com/emodnet"><img src="./Assets/up-right.svg" alt="Twitter"
-                                        height="15px"></a>
-                            </div>
-                            <div>
-                                <a href="https://www.linkedin.com/company/emodnet"><img src="./Assets/linkedin-icon.svg"
-                                        alt="Linkedin" height="12px"></a>
-                                <a href="https://www.linkedin.com/company/emodnet">Linkedin</a>
-                                <a href="https://www.linkedin.com/company/emodnet"><img src="./Assets/up-right.svg"
-                                        alt="Twitter" height="15px"></a>
-                            </div>
-                            <div>
-                                <a href="https://www.youtube.com/channel/UCaXRktHQoM5VdtRsCB_Z2YA/videos">
-                                    <img src="./Assets/youtube-icon.svg" alt="Youtube" height="12px"> </a>
-                                <a href="https://www.youtube.com/channel/UCaXRktHQoM5VdtRsCB_Z2YA/videos">Youtube</a>
-                                <a href="https://www.youtube.com/channel/UCaXRktHQoM5VdtRsCB_Z2YA/videos"><img src="./Assets/up-right.svg"
-                                        alt="Twitter" height="15px"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="third-child1">
-                        <div>
-                            <h3>European Atlas of the Seas</h3>
-                        </div>
-                        <div class="divider"></div>
-                        <div>EMODnet data layers in the Atlas</div>
-                        <div>
-                            <h3>Thematic lots</h3>
-                        </div>
-                        <div class="divider"></div>
-                        <div>Bathymetry</div>
-                        <div>Biology</div>
-                        <div>Chemistry</div>
-                        <div>Geology</div>
-                        <div>Human Activities</div>
-                        <div>Physics</div>
-                        <div>Seabed Habitats</div>
-                    </div>
-                </div>
-                <div class="divider"></div>
-                <div>
-                    <div class="altezza">More information on:</div>
+                        <div class="column gap-row-8">
+                            <span><strong>Follow us</strong></span>
+                            <div class="divider"></div>
+                            <div class="grow-1 row">
+                                <a class="white-link grow-1" href="https://twitter.com/EMODnet">
 
-                    <div class="altezza">Energy, Climate change, Environment</div>
-                    <div class="altezza">Research and innovation</div>
-                    <div class="altezza">Food, Farming, Fisheries</div>
+                                    Twitter
+                                </a>
+                                <a class="white-link grow-1" href="https://www.linkedin.com/company/emodnet/">
+                                    LinkedIn
+                                </a>
+                                <a class="white-link grow-1" href="https://www.facebook.com/EMODnet">
+                                    Facebook
+                                </a>
+                                <a class="white-link grow-1" href="https://www.youtube.com/user/EMODnet">
+                                    YouTube
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="grow-1 column min-width-334 gap-row-16">
+                        <div class="column gap-row-8">
+                            <span><strong>European Atlas of the Seas</strong></span>
+                        <div class="divider"></div>
+                        <a class="white-link" href="https://emodnet.ec.europa.eu/emodnet-maps-catalogue">EMODnet
+                            data layers in the Atlas</a>
+
+                        </div>
+                         <div class="column gap-row-8"> 
+                        <span><strong>Thematic lots</strong></span>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/bathymetry">Bathymetry</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/biology">Biology</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/chemistry">Chemistry</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/geology">Geology</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/human-activities">Human
+                            activities</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/physics">Physics</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/portals">Ports</a>
+                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/seabed-habitats">Seabed
+                            habitats</a>
+                            </div>
+                    </div>
+
+                </div>
+
+                <div class="divider"></div>
+                <div class="gap-row-32"> <!--secondo-->
+                    <div class="column gap-row-16 min-width-334">
+                        <span> More information on:</span>
+                        <a class="white-link"
+                            href="https://ec.europa.eu/info/energy-climate-change-environment_en">Energy,
+                            Climate change, Environment</a>
+                        <a class="white-link" href="https://ec.europa.eu/info/research-and-innovation_en">Research and
+                            Innovation</a>
+                        <a class="white-link" href="https://ec.europa.eu/info/food-farming-fisheries_en">Food, Farming,
+                            Fisheries</a>
+                    </div>
                 </div>
                 <div class="divider"></div>
-                <div class="second-child">
-                    <div><img src="./Assets/logo-ec--en.webp" alt="European-Commission"></div>
-                    <div>
-                        <ul class="ul-margin">
-                            <li class="altezza">Contact the European Commission</li>
-                            <li class="altezza">Follow the European Commission on social media</li>
-                            <li class="altezza">Resources for partners</li>
+                <div class="gap-column-16 row gap-row-32"> <!--terzo-->
+                    <div class="grow-1 min-width-334">
+                        <img height="80"
+                            src="https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/footer/logo-ec--en.webp"
+                            alt="European Commission">
+                    </div>
+                    <div class="grow-1 min-width-334">
+                        <ul class="margin-0 column  gap-row-16 ">
+                            <li><a class="white-link"
+                                    href="https://ec.europa.eu/info/about-european-commission/contact_en">Contact
+                                    the European Commission</a></li>
+                            <li><a class="white-link"
+                                    href="https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s">Follow
+                                    the European Commission on social media</a></li>
+                            <li> <a class="white-link" href="https://ec.europa.eu/info/resources-partners_en">Resources
+                                    for partners</a></li>
                         </ul>
                     </div>
-                    <div class="third-child2">
-                        <div class="altezza">Language policy</div>
-                        <div class="altezza">Cookies</div>
-                        <div class="altezza">Privacy policy</div>
-                        <div class="altezza">Legal notice</div>
+                    <div class="column grow-1 gap-row-16  min-width-334">
+                        <a class="white-link" href="https://ec.europa.eu/info/language-policy_en">Language
+                            policy</a>
+                        <a class="white-link" href="https://ec.europa.eu/info/cookies_en">Cookies</a>
+                        <a class="white-link" href="https://ec.europa.eu/info/privacy-policy_en">Privacy policy</a>
+                        <a class="white-link" href="https://ec.europa.eu/info/legal-notice_en">Legal notice</a>
                     </div>
                 </div>
+
             </div>
+        </div>
     </body>
 
 </html>
