modifiche con classi generali

--- a/index.html
+++ b/index.html
@@ -9,32 +9,33 @@
     </head>
 
     <body>
-        <div class="container justify-center color-white height-800">
-            <div class="max-width column height-800 padding-32"> <!--contenitore centrale -->
-                <div class="gap-row-32 gap-column-16"> <!--primo-->
+        <div class="container justify-center color-white">
+            <div class="max-width column gap-row-16 padding-32"> <!--contenitore centrale -->
+                <div class="gap-row-32 gap-column-16 wrap"> <!--primo-->
                     <div class="grow-1 column min-width-334 gap-row-16">
-                        <h3 class="margin-0">European Marine Observation and Data Network (EMODnet) </h3>
+                        <h3 class="margin-0 font-1-5">European Marine Observation and Data Network (EMODnet) </h3>
                         <span> This site is managed by the Directorate-General for Maritime Affairs and Fisheries
                             (DG MARE)</span>
-                        <a class="white-link" href="https://emodnet.ec.europa.eu/accessibility-statement">Accessibility</a>
+                        <a class="white-link"
+                            href="https://emodnet.ec.europa.eu/accessibility-statement">Accessibility</a>
                     </div>
                     <div class="grow-1 column min-width-334 gap-row-16">
                         <div class="column gap-row-8">
-                            <span><strong>About us</strong></span>
+                            <span class="font-1-2"><strong>About us</strong></span>
                             <div class="divider"></div>
                             <a class="white-link" href="https://emodnet.ec.europa.eu/about_emodnet">The European
                                 Marine Observation and Data Network (EMODnet) is a network of organisations supported by
                                 the EU’s integrated maritime policy.</a>
                         </div>
                         <div class="column gap-row-8">
-                            <span><strong>Contact us</strong></span>
+                            <span class="font-1-2"><strong>Contact us</strong></span>
                             <div class="divider"></div>
                             <a class="white-link" href="https://emodnet.ec.europa.eu/contact-us">Contact information</a>
                         </div>
                         <div class="column gap-row-8">
-                            <span><strong>Follow us</strong></span>
+                            <span class="font-1-2"><strong>Follow us</strong></span>
                             <div class="divider"></div>
-                            <div class="grow-1 row">
+                            <div>
                                 <a class="white-link grow-1" href="https://twitter.com/EMODnet">
 
                                     Twitter
@@ -51,34 +52,35 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="grow-1 column min-width-334 gap-row-16">
                         <div class="column gap-row-8">
-                            <span><strong>European Atlas of the Seas</strong></span>
-                        <div class="divider"></div>
-                        <a class="white-link" href="https://emodnet.ec.europa.eu/emodnet-maps-catalogue">EMODnet
-                            data layers in the Atlas</a>
-
+                            <span class="font-1-2"><strong>European Atlas of the Seas</strong></span>
+                            <div class="divider"></div>
+                            <a class="white-link" href="https://emodnet.ec.europa.eu/emodnet-maps-catalogue">EMODnet
+                                data layers in the Atlas</a>
                         </div>
-                         <div class="column gap-row-8"> 
-                        <span><strong>Thematic lots</strong></span>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/bathymetry">Bathymetry</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/biology">Biology</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/chemistry">Chemistry</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/geology">Geology</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/human-activities">Human
-                            activities</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/physics">Physics</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/portals">Ports</a>
-                        <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/seabed-habitats">Seabed
-                            habitats</a>
-                            </div>
+                        <div class="column gap-row-8">
+                            <span class="font-1-2"><strong>Thematic lots</strong></span>
+                            <div class="divider"></div>
+                            <a class="white-link margin-bottom"
+                                href="https://emodnet.ec.europa.eu/bathymetry">Bathymetry</a>
+                            <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/biology">Biology</a>
+                            <a class="white-link margin-bottom"
+                                href="https://emodnet.ec.europa.eu/chemistry">Chemistry</a>
+                            <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/geology">Geology</a>
+                            <a class="white-link margin-bottom"
+                                href="https://emodnet.ec.europa.eu/human-activities">Human
+                                activities</a>
+                            <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/physics">Physics</a>
+                            <a class="white-link margin-bottom" href="https://emodnet.ec.europa.eu/portals">Ports</a>
+                            <a class="white-link margin-bottom"
+                                href="https://emodnet.ec.europa.eu/seabed-habitats">Seabed
+                                habitats</a>
+                        </div>
                     </div>
-
                 </div>
-
                 <div class="divider"></div>
-                <div class="gap-row-32"> <!--secondo-->
+                <div class="wrap gap-row-32"> <!--secondo-->
                     <div class="column gap-row-16 min-width-334">
                         <span> More information on:</span>
                         <a class="white-link"
@@ -91,7 +93,7 @@
                     </div>
                 </div>
                 <div class="divider"></div>
-                <div class="gap-column-16 row gap-row-32"> <!--terzo-->
+                <div class="gap-column-16 gap-row-32 wrap"> <!--terzo-->
                     <div class="grow-1 min-width-334">
                         <img height="80"
                             src="https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/footer/logo-ec--en.webp"
@@ -109,7 +111,7 @@
                                     for partners</a></li>
                         </ul>
                     </div>
-                    <div class="column grow-1 gap-row-16  min-width-334">
+                    <div class="column grow-1 gap-row-16 min-width-334">
                         <a class="white-link" href="https://ec.europa.eu/info/language-policy_en">Language
                             policy</a>
                         <a class="white-link" href="https://ec.europa.eu/info/cookies_en">Cookies</a>
@@ -117,7 +119,6 @@
                         <a class="white-link" href="https://ec.europa.eu/info/legal-notice_en">Legal notice</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </body>
